# coos-test

./: .gitignore  Makefile.am  configure.ac  do-configure-arm
CoOS/: Makefile.am  OsConfig.h
CoOS/portable/IAR/: portForM0.asm  portForM3.asm  portForM4.asm
CoOS/portable/Keil/: port.c
include/: Makefile.am  cc_config.h.in  config.h
src/: Makefile.am  crt0.c  main.c
